# turdle

./: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: command.rs  lib.rs
crates/client/: Cargo.toml
crates/client/src/: commander.rs
crates/client/tests/: test.rs
crates/client/tests/test_data/: expected_client_code.rs
crates/explorer/: Cargo.toml
crates/explorer/src/parse/: bpf_upgradeable_loader.rs
crates/test/: Cargo.toml
