[package]
name = "turdle-cli"
version = "0.1.1"
rust-version = "1.59"
repository = "https://github.com/AlphaPrime8/turdle"
edition = "2021"
license-file = "../../LICENSE"
readme = "../../README.md"
description = "Trdelník is Rust based testing framework providing several convenient developer tools for testing Solana programs written in Anchor."

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros", "fs", "signal", "sync", "time", "io-util", "process"], default-features = false }
anyhow = { version = "1.0.56", features = ["std"], default-features = false }
fehler = { version = "1.0.0", default-features = false }
solana-sdk = "~1.14.16"
trdelnik-client = { path = "../client", package = "turdle-client" , version = "0.1.1"}
trdelnik-explorer = { path = "../explorer", package = "turdle-explorer", version = "0.1.0"}
